[cronet] Apply AtExitManager workaround to Component builds.

We work-around shared global state in component builds of the Cronet
native library by avoiding creating the AtExitManager in those builds.
The condition for that is fixed here, from being based on Debug build
to depending directly on whether this is a component build.

The tests are also enabled on Fuchsia/Debug, where they now pass.

Bug: 833401, 816705
Cq-Include-Trybots: master.tryserver.chromium.android:android_cronet_tester;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I1401c0dcaa8e893c6cd4bcbf75f8d4d30ccd0116
Reviewed-on: https://chromium-review.googlesource.com/1014642
Commit-Queue: Wez <wez@chromium.org>
Reviewed-by: Dirk Pranke <dpranke@chromium.org>
Reviewed-by: Reid Kleckner <rnk@chromium.org>
Reviewed-by: Misha Efimov <mef@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551788}
Former-commit-id: 5fe14697a2fc922c26818612a3e3f6ba22daaa99